Set backgroud to white

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -8,8 +8,8 @@
 @import "https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css";
 
 :root {
-  --backgroud:  #92ce92;
-  --navBackground: #1d9627;
+  --backgroud:  #ffffff;
+  --navBackground: #ffffff;
   --color: #333;
   --mainHeaderColor: #7d1d3f;
 }
