--- a/src/scss/modules/navigation.scss
+++ b/src/scss/modules/navigation.scss
@@ -12,7 +12,7 @@
     box-sizing: border-box;
     
     &__link {
-      color: #fff;
+      color: #000;
       display: inline-block;
       margin-right: 20px;
       text-decoration: none;
