--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -5,6 +5,7 @@
 
 @include meta.load-css("modules/week-summary.scss");
 @include meta.load-css("modules/navigation.scss");
+@include meta.load-css("modules/geeks-club.scss");
 @import "https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css";
 
 :root {
