fix publishing images.

--- a/src/scss/modules/week-summary.scss
+++ b/src/scss/modules/week-summary.scss
@@ -11,8 +11,7 @@
         width: 16px;
         color: transparent;
         content: 'AA';
-        background-image: url("../assets/img/wtf-thumb.png");
-        // background-image: url("../../assets/img/wtf-thumb.png");
+        background-image: url("../../assets/img/wtf-thumb.png");
         background-size: 25px;
         background-repeat: no-repeat;
         }
