--- a/src/scss/modules/geeks-club.scss
+++ b/src/scss/modules/geeks-club.scss
@@ -98,6 +98,20 @@
       background-color: transparent;
     }
   }
+
+  .article-tags {
+    margin: 0.5rem 0;
+  }
+  
+  .tag {
+    display: inline-block;
+    padding: 0.25rem 0.75rem;
+    margin-right: 0.5rem;
+    background-color: #e9ecef;
+    border-radius: 1rem;
+    font-size: 0.875rem;
+    color: #495057;
+  }
 }
 
 // Responsive design
