Add page about breakpoint groups

--- a/src/partials/navigation.html
+++ b/src/partials/navigation.html
@@ -5,6 +5,7 @@
     <div class="navigation__dropdown-content">
       <a class="navigation__link" href="geeks-club-week1.html">Tydzień 1</a>
       <a class="navigation__link" href="geeks-club-week2.html">Tydzień 2</a>
+      <a class="navigation__link" href="breakpointGroups.html">Breakpoint groups export</a>
     </div>
   </div>
   <input type="checkbox" id="toggle" class="navigation__checkbox darkmode--js" />  
