--- a/src/scss/modules/navigation.scss
+++ b/src/scss/modules/navigation.scss
@@ -41,7 +41,7 @@
         z-index: 1;
 
         a {
-          color: #fff;
+          color: #FFFFFF;
           padding: 12px 16px;
           text-decoration: none;
           display: block;
@@ -86,4 +86,12 @@
 }
 .navigation__checkbox:checked + .switch {
   background-color: #7983ff;
+}
+
+.navigation a {
+  color: #FFFFFF;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+}
+.navigation a:hover {
+  text-decoration: underline;
 }
